unpackaged/main/default/objects/Staged_Sales_Order_Line__c/Staged_Sales_Order_Line__c.object-meta.xml
<CustomObject>
    <description>Staging object used for data migration of Sales Order Lines (Child record of Staged Sales Order)</description>
    <label>Staged Sales Order Line</label>
    <nameField>
        <displayFormat>STGOL-{0000000}</displayFormat>
        <label>Staged Sales Order Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staged Sales Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>