unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Accepted_Vendor_Tag__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Vendor_Tag__c</fullName>
    <label>Accepted Vendor Tag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Lucid</fullName>
            </value>
            <value>
                <fullName>Survata</fullName>
            </value>
            <value>
                <fullName>Dynata/Research Now</fullName>
            </value>
            <value>
                <fullName>AudienceProject</fullName>
            </value>
            <value>
                <fullName>Ninth Decimal</fullName>
            </value>
            <value>
                <fullName>Cuebiq</fullName>
            </value>
            <value>
                <fullName>PlaceIQ</fullName>
            </value>
            <value>
                <fullName>Samba</fullName>
            </value>
            <value>
                <fullName>Marketing Evolution</fullName>
            </value>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>Kochava</fullName>
            </value>
            <value>
                <fullName>Alphonso</fullName>
            </value>
            <value>
                <fullName>Appsflyer</fullName>
            </value>
            <value>
                <fullName>TV Ad Sync</fullName>
            </value>
            <value>
                <fullName>Nielsen CPG MTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>