unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Advertiser from Opportunity</description>
    <inlineHelpText>Advertiser from Opportunity</inlineHelpText>
    <label>AccountId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staged Sales Order Lines</relationshipLabel>
    <relationshipName>Staged_Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>