unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Ad_Location_Description__c.field-meta.xml
<CustomField>
    <fullName>Ad_Location_Description__c</fullName>
    <description>Ad Location Description for this Line Item</description>
    <inlineHelpText>Ad Location Description for this Line Item</inlineHelpText>
    <label>Ad Location Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desktop</fullName>
            </value>
            <value>
                <fullName>Everywhere</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Pass Through</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>