unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Ad_Server__c.field-meta.xml
<CustomField>
    <fullName>Ad_Server__c</fullName>
    <formula>Staged_Sales_Order__r.Ad_Server__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ad Server</label>
    <type>Text</type>
</CustomField>