unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Ad_Server_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Ad_Server_Item_Name__c</fullName>
    <description>Mapping between DFP Product and Spotify Product Catalogue - Product Name</description>
    <inlineHelpText>Mapping between DFP Product and Spotify Product Catalogue - Product Name - Example:  &#39;Audio _Desktop_Rotational&#39;</inlineHelpText>
    <label>Ad Server Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>