unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Ad_Server_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Ad_Server_Time_Zone__c</fullName>
    <defaultValue>&quot;GMT&quot;</defaultValue>
    <description>Time zone Must be converted to GMT from America/New_York etc.</description>
    <inlineHelpText>Time zone Must be converted to GMT from America/New_York etc.</inlineHelpText>
    <label>Ad Server Time Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>