unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Ad_Type__c.field-meta.xml
<CustomField>
    <fullName>Ad_Type__c</fullName>
    <description>Ad Type (pick from list)</description>
    <inlineHelpText>Ad Type (pick from list)</inlineHelpText>
    <label>Ad Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk</fullName>
            </value>
            <value>
                <fullName>House</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Price Priority</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>