unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Additional_comment__c.field-meta.xml
<CustomField>
    <fullName>Additional_comment__c</fullName>
    <formula>&quot;Proposal ID: &quot; + Staged_Sales_Order__r.Migrated_Proposal_Id__c + &quot; - Proposal Line ID: &quot; +  Migrated_Proposal_Line_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Additional comment</label>
    <type>Text</type>
</CustomField>