unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Advertiser__c.field-meta.xml
<CustomField>
    <fullName>Advertiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Advertiser from the Opportunity</description>
    <inlineHelpText>Advertiser from the Opportunity</inlineHelpText>
    <label>Advertiser</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staged Sales Order Lines (Advertiser)</relationshipLabel>
    <relationshipName>Staged_Sales_Order_Advertiser</relationshipName>
    <type>Lookup</type>
</CustomField>