unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Media Agency ID from Opportunity (001xxxxxxxxxxxxxxxxxx)</description>
    <inlineHelpText>Media Agency ID from Opportunity (001xxxxxxxxxxxxxxxxxx)</inlineHelpText>
    <label>Agency</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Agency account can not have type Advertiser and must have DFP Company ID</errorMessage>
        <filterItems>
            <field>Account.DFP_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>notEqual</operation>
            <value>Advertiser</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staged Sales Order Lines (Agency)</relationshipLabel>
    <relationshipName>Staged_Sales_Order_Lines_Agency</relationshipName>
    <type>Lookup</type>
</CustomField>