unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Agency_Commission__c.field-meta.xml
<CustomField>
    <fullName>Agency_Commission__c</fullName>
    <description>Agency Commission Percent</description>
    <inlineHelpText>Agency Commission Percent</inlineHelpText>
    <label>Agency Commission %</label>
    <precision>9</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>