unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Agency_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Agency_Commission_Amount__c</fullName>
    <description>Total After Discounts * Agency Commission</description>
    <inlineHelpText>Total After Discounts * Agency Commission</inlineHelpText>
    <label>Agency Commission Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>