unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Bill_To_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bill To Account ID from Opportunity (e.g. 0016E00000YN9V0QAL)</description>
    <inlineHelpText>Bill To Account ID From Opportunity (e.g. 0016E00000YN9V0QAL)</inlineHelpText>
    <label>Bill To Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staged Sales Order Lines (Bill To Account Id)</relationshipLabel>
    <relationshipName>Staged_Sales_Order_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>