unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Billing_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Billing_Calendar__c</fullName>
    <description>Which billing Calendar is used for the order line.</description>
    <inlineHelpText>Which billing Calendar is used for the order line.</inlineHelpText>
    <label>Billing Calendar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Broadcast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>