unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Billing_Source__c.field-meta.xml
<CustomField>
    <fullName>Billing_Source__c</fullName>
    <description>Billing Source for this Line Item</description>
    <inlineHelpText>Billing Source for this Line Item</inlineHelpText>
    <label>Billing Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contracted</fullName>
            </value>
            <value>
                <fullName>DFP Actuals</fullName>
            </value>
            <value>
                <fullName>3rd Party Actuals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>