unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Booking_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Booking_Time_Zone__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Id of the Booking Time Zone object that represents the booking time zone for the order line</description>
    <inlineHelpText>The Id of the Booking Time Zone object that represents the booking time zone for the order line</inlineHelpText>
    <label>Booking Time Zone</label>
    <referenceTo>Booking_Time_Zone__c</referenceTo>
    <relationshipLabel>Staged Sales Order Lines</relationshipLabel>
    <relationshipName>Staged_Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>