unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Buffer__c.field-meta.xml
<CustomField>
    <fullName>Buffer__c</fullName>
    <label>Buffer</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>