unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Type__c</fullName>
    <description>Calculation Type: Net or Gross</description>
    <inlineHelpText>Calculation Type: Net or Gross</inlineHelpText>
    <label>Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net</fullName>
            </value>
            <value>
                <fullName>Gross</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>