unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/CONST_Blank__c.field-meta.xml
<CustomField>
    <fullName>CONST_Blank__c</fullName>
    <description>Return blank</description>
    <formula>&quot;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>blank</inlineHelpText>
    <label>CONST Blank</label>
    <type>Text</type>
</CustomField>