unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/CONST_False__c.field-meta.xml
<CustomField>
    <fullName>CONST_False__c</fullName>
    <description>Constant Fales used for Property mapping</description>
    <formula>False</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Constant Fales used for Property mapping</inlineHelpText>
    <label>CONST False</label>
    <type>Checkbox</type>
</CustomField>