unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/CONST_FLAG_Migrated_Line__c.field-meta.xml
<CustomField>
    <fullName>CONST_FLAG_Migrated_Line__c</fullName>
    <formula>True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONST FLAG Migrated Line</label>
    <type>Checkbox</type>
</CustomField>