unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/CONST_No__c.field-meta.xml
<CustomField>
    <fullName>CONST_No__c</fullName>
    <formula>&#39;No&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONST No</label>
    <type>Text</type>
</CustomField>