unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/CONST_Ready__c.field-meta.xml
<CustomField>
    <fullName>CONST_Ready__c</fullName>
    <formula>&#39;Ready&#39;</formula>
    <label>CONST Ready</label>
    <type>Text</type>
</CustomField>