unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/CONST_True__c.field-meta.xml
<CustomField>
    <fullName>CONST_True__c</fullName>
    <description>Created as a constant to map TRUE in Property Maps</description>
    <formula>True</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Created as a constant to map TRUE in Property Maps</inlineHelpText>
    <label>CONST True</label>
    <type>Checkbox</type>
</CustomField>