unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/CONST_Yes__c.field-meta.xml
<CustomField>
    <fullName>CONST_Yes__c</fullName>
    <formula>&#39;Yes&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONST Yes</label>
    <type>Text</type>
</CustomField>