unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Cost_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Cost_Adjustment__c</fullName>
    <label>Cost Adjustment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Added Value</fullName>
            </value>
            <value>
                <fullName>Brand Study</fullName>
            </value>
            <value>
                <fullName>Make Good</fullName>
            </value>
            <value>
                <fullName>No Cost Adjustment</fullName>
            </value>
            <value>
                <fullName>Pro Bono</fullName>
            </value>
            <value>
                <fullName>Production fee paid by Spotify</fullName>
            </value>
            <value>
                <fullName>Production fee paid by Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>