unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Display_Price__c.field-meta.xml
<CustomField>
    <fullName>Display_Price__c</fullName>
    <description>Final Price on display format for when IO Volume Discount is applied</description>
    <inlineHelpText>Final Price on display format for when IO Volume Discount is applied</inlineHelpText>
    <label>Display Price</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>