unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Do_not_Apply_Agency_Commission__c.field-meta.xml
<CustomField>
    <fullName>Do_not_Apply_Agency_Commission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Apply Agency Commission</label>
    <type>Checkbox</type>
</CustomField>