unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Final_Price__c.field-meta.xml
<CustomField>
    <fullName>Final_Price__c</fullName>
    <description>Final price (Net Unit Price * Qty)</description>
    <inlineHelpText>Final price (Net Unit Price * Qty)</inlineHelpText>
    <label>Final Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>