unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Flight_Begin__c.field-meta.xml
<CustomField>
    <fullName>Flight_Begin__c</fullName>
    <description>&quot;DFP Start Time using the following format YYYY-MM-DD
Converted into Booking Timezone&quot;</description>
    <inlineHelpText>&quot;DFP Start Time using the following format YYYY-MM-DD
Converted into Booking Timezone&quot;</inlineHelpText>
    <label>Flight Begin</label>
    <type>Date</type>
</CustomField>