unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Flight_Begin_Time__c.field-meta.xml
<CustomField>
    <fullName>Flight_Begin_Time__c</fullName>
    <description>Flight begin time (in booking time zone) HH:MM</description>
    <inlineHelpText>Flight begin time (in booking time zone) HH:MM</inlineHelpText>
    <label>Flight Begin Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>