unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Flight_End__c.field-meta.xml
<CustomField>
    <fullName>Flight_End__c</fullName>
    <description>&quot;DFP End Time using the following format YYYY-MM-DD
Converted into Booking Timezone&quot;</description>
    <inlineHelpText>&quot;DFP End Time using the following format YYYY-MM-DD
Converted into Booking Timezone&quot;</inlineHelpText>
    <label>Flight End</label>
    <type>Date</type>
</CustomField>