unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Flight_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Flight_End_Time__c</fullName>
    <description>Campaign End Time in booking time zone</description>
    <inlineHelpText>Campaign End Time in booking time zone (HH:MM)</inlineHelpText>
    <label>Flight End Time</label>
    <length>5</length>
    <type>Text</type>
</CustomField>