unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Gross_Cost__c.field-meta.xml
<CustomField>
    <fullName>Gross_Cost__c</fullName>
    <formula>Final_Price__c / ( 1 - Agency_Commission__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Cost</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>