unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Gross_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Gross_Unit_Price__c</fullName>
    <description>Gross Rate</description>
    <inlineHelpText>Gross Rate</inlineHelpText>
    <label>Gross Unit Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>