unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Insertion_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Insertion_Quantity__c</fullName>
    <description>Contracted Quantity in absolute amounts (on CPM the number should be total number of impressions - example: 100000) or Number of days for &quot;Sponsorship&quot; items</description>
    <inlineHelpText>Contracted Quantity in absolute amounts (on CPM the number should be total number of impressions - example: 100000) or Number of days for &quot;Sponsorship&quot; items</inlineHelpText>
    <label>Insertion Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>