unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Insertion_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Insertion_Unit_Type__c</fullName>
    <description>Billing category (e.g. CPM, CPC...) - Rate Type from DSM</description>
    <inlineHelpText>Billing category (e.g. CPM, CPC...) - Rate Type from DSM</inlineHelpText>
    <label>Insertion Unit Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>