unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Insertion_Unit_Type_Display__c.field-meta.xml
<CustomField>
    <fullName>Insertion_Unit_Type_Display__c</fullName>
    <formula>TEXT(Product__r.Rate_Type_Display__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insertion Unit Type Display</label>
    <type>Text</type>
</CustomField>