unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Line_Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Category__c</fullName>
    <description>Mapping between DSM and Spotify Product Catalogue - Line Item Category - Example is &#39;Rotational&#39;</description>
    <inlineHelpText>Mapping between DSM and Spotify Product Catalogue - Line Item Category- Example is &#39;Rotational&#39;</inlineHelpText>
    <label>Line Item Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>