unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Line_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Description__c</fullName>
    <description>Line Item Description : Mapping between DFP Product and Spotify Product Catalogue - Market_Product Name eg	US_Audio _Desktop_Rotational</description>
    <inlineHelpText>Line Item Description : Mapping between DFP Product and Spotify Product Catalogue - Market_Product Name eg 	US_Audio _Desktop_Rotational</inlineHelpText>
    <label>Line Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>