unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Line_Item_ref__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_ref__c</fullName>
    <description>PO Number - Individual ref supplied per line item (e.g. Agency ref)</description>
    <inlineHelpText>PO Number - Individual ref supplied per line item (e.g. Agency ref)</inlineHelpText>
    <label>Line Item ref</label>
    <length>244</length>
    <type>Text</type>
</CustomField>