unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Product Node to get the Market</description>
    <inlineHelpText>Lookup to Product Node to get the Market</inlineHelpText>
    <label>Market</label>
    <referenceTo>csmso__Product_Node__c</referenceTo>
    <relationshipLabel>Staged Sales Order Lines</relationshipLabel>
    <relationshipName>Staged_Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>