unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Market_Geo_Item__c.field-meta.xml
<CustomField>
    <fullName>Market_Geo_Item__c</fullName>
    <formula>Market__r.Geo_Targeting__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Geo Item</label>
    <type>Text</type>
</CustomField>