unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Migrated_Order_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Order_Line_Id__c</fullName>
    <description>DFP Order Line Id</description>
    <externalId>true</externalId>
    <inlineHelpText>DFP Order Line Id. This will not be populated for non -adserved products.</inlineHelpText>
    <label>Migrated Order Line Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>