unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Migrated_Proposal_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Proposal_Line_Id__c</fullName>
    <externalId>true</externalId>
    <label>Migrated Proposal Line Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>