unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Net_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Net_Unit_Price__c</fullName>
    <label>Net Unit Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>