unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Notes From DFP Order Line</description>
    <inlineHelpText>Notes From DFP Order Line</inlineHelpText>
    <label>Notes</label>
    <length>4500</length>
    <type>LongTextArea</type>
</CustomField>