unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Playlist__c.field-meta.xml
<CustomField>
    <fullName>Playlist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Playlist Object</description>
    <inlineHelpText>Lookup to Playlist Object</inlineHelpText>
    <label>Playlist</label>
    <referenceTo>Playlist__c</referenceTo>
    <relationshipLabel>Staged Sales Order Lines</relationshipLabel>
    <relationshipName>Staged_Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>