unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Product ID from mapping old DSM products to new.</description>
    <inlineHelpText>Product ID from mapping old DSM products to new.</inlineHelpText>
    <label>Product</label>
    <referenceTo>csmso__Node_Advert_Assignment__c</referenceTo>
    <relationshipLabel>Staged Sales Order Lines</relationshipLabel>
    <relationshipName>Staged_Sales_Order_Lines</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>