unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Reach_Measurement_Vendor_1__c.field-meta.xml
<CustomField>
    <fullName>Reach_Measurement_Vendor_1__c</fullName>
    <label>Reach Measurement Vendor 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Nielsen Digital Ad Ratings - Client Commissioned</fullName>
            </value>
            <value>
                <fullName>Nielsen Digital Ad Ratings - Spotify Commissioned</fullName>
            </value>
            <value>
                <fullName>MOAT</fullName>
            </value>
            <value>
                <fullName>comScore vCE</fullName>
            </value>
            <value>
                <fullName>IAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>