unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Reaction_Measurement_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Reaction_Measurement_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reaction Measurement Vendor</label>
    <type>Checkbox</type>
</CustomField>