unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Resonance_Measurement__c.field-meta.xml
<CustomField>
    <fullName>Resonance_Measurement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resonance Measurement</label>
    <type>Checkbox</type>
</CustomField>