unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Resonance_Request_Form_sent__c.field-meta.xml
<CustomField>
    <fullName>Resonance_Request_Form_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resonance Request Form sent</label>
    <type>Checkbox</type>
</CustomField>