unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Resonance_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Resonance_Vendor__c</fullName>
    <label>Resonance Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>LeanLab</fullName>
            </value>
            <value>
                <fullName>Milward Brown</fullName>
            </value>
            <value>
                <fullName>Nielsen Brand Effect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>