unpackaged/main/default/objects/Staged_Sales_Order_Line__c/fields/Scheduled_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Quantity__c</fullName>
    <label>Scheduled Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>